@@ -1188,6 +1188,50 @@ return {
 ```lua
 -- plugins/java.lua
 
+-- return {
+--   {
+--     "mfussenegger/nvim-jdtls",
+--     ft = { "java" },
+--     dependencies = {
+--       "mason-org/mason.nvim",
+--       "mason-org/mason-lspconfig.nvim",
+--     },
+--     config = function()
+--       local jdtls = require("jdtls")
+--       local mason_path = vim.fn.stdpath("data") .. "/mason"
+--       local jdtls_path = mason_path .. "/packages/jdtls"
+
+--       local jar = vim.fn.glob(jdtls_path .. "/plugins/org.eclipse.equinox.launcher_*.jar")
+--       local config_dir = jdtls_path .. "/config_linux"
+
+--       local config = {
+--         cmd = {
+--           "java",
+--           "-Declipse.application=org.eclipse.jdt.ls.core.id1",
+--           "-Dosgi.bundles.defaultStartLevel=4",
+--           "-Declipse.product=org.eclipse.jdt.ls.core.product",
+--           "-Dlog.protocol=true",
+--           "-Dlog.level=ALL",
+--           "-Xms1g",
+--           "--add-modules=ALL-SYSTEM",
+--           "--add-opens", "java.base/java.util=ALL-UNNAMED",
+--           "--add-opens", "java.base/java.lang=ALL-UNNAMED",
+--           "-jar", jar,
+--           "-configuration", config_dir,
+--           "-data", vim.fn.stdpath("cache") .. "/jdtls/" .. vim.fn.fnamemodify(vim.fn.getcwd(), ":p:h:t"),
+--         },
+--         root_dir = require("jdtls.setup").find_root({ ".git", "mvnw", "gradlew", "pom.xml", "build.gradle" }),
+--       }
+
+--       jdtls.start_or_attach(config)
+--     end,
+--   },
+-- }
+
+-- Wenn jar leer ist, startet LSP nicht!
+-- root_dir kann nil sein
+-- jdtls braucht Java 17+ (je nach Version).
+
 return {
   {
     "mfussenegger/nvim-jdtls",
@@ -1202,7 +1246,34 @@ return {
       local jdtls_path = mason_path .. "/packages/jdtls"
 
       local jar = vim.fn.glob(jdtls_path .. "/plugins/org.eclipse.equinox.launcher_*.jar")
-      local config_dir = jdtls_path .. "/config_linux"
+      if jar == "" then
+        vim.notify("jdtls jar not found. Install jdtls via Mason.", vim.log.levels.ERROR)
+        return
+      end
+
+      -- config dir abhängig vom OS
+      local os_config
+      if vim.fn.has("macunix") == 1 then
+        os_config = "config_mac"
+      elseif vim.fn.has("win32") == 1 then
+        os_config = "config_win"
+      else
+        os_config = "config_linux"
+      end
+
+      local config_dir = jdtls_path .. "/" .. os_config
+
+      -- root_dir berechnen
+      local root_dir = require("jdtls.setup").find_root({
+        ".git", "mvnw", "gradlew", "pom.xml", "build.gradle"
+      })
+
+      if not root_dir then
+        root_dir = vim.fn.getcwd()
+      end
+
+      -- Workspace eindeutig (hash des Pfades)
+      local workspace_dir = vim.fn.stdpath("cache") .. "/jdtls/" .. vim.fn.sha256(root_dir)
 
       local config = {
         cmd = {
@@ -1218,9 +1289,18 @@ return {
           "--add-opens", "java.base/java.lang=ALL-UNNAMED",
           "-jar", jar,
           "-configuration", config_dir,
-          "-data", vim.fn.stdpath("cache") .. "/jdtls/" .. vim.fn.fnamemodify(vim.fn.getcwd(), ":p:h:t"),
+          "-data", workspace_dir,
         },
-        root_dir = require("jdtls.setup").find_root({ ".git", "mvnw", "gradlew", "pom.xml", "build.gradle" }),
+        root_dir = root_dir,
+        settings = {
+          java = {
+            eclipse = { downloadSources = true },
+            maven = { downloadSources = true },
+            format = { enabled = true },
+            referencesCodeLens = { enabled = true },
+            implementationsCodeLens = { enabled = true },
+          },
+        },
       }
 
       jdtls.start_or_attach(config)
